Renamed package to rx_event_bus

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: event_bus
+name: rx_event_bus
 version: 2.0.1
 description: A simple Event Bus using Dart Streams for decoupling applications
 repository: https://github.com/marcojakob/dart-event-bus
